--- a/angular-src/src/app/add-bundle/add-bundle.component.html
+++ b/angular-src/src/app/add-bundle/add-bundle.component.html
@@ -6,7 +6,7 @@
     <input required [(ngModel)]="newBundle.info"/>
   </label><br/>
   <label>Paths:
-    <input required [(ngModel)]="newBundle.paths"/>
+    <input required [(ngModel)]="paths"/>
   </label><br/>
   <label>Image:
     <input [(ngModel)]="newBundle.image"/>
