Added simple button to be able to toggle showing/hiding add bundle component

--- a/angular-src/src/app/view-bundle/view-bundle.component.html
+++ b/angular-src/src/app/view-bundle/view-bundle.component.html
@@ -23,4 +23,5 @@
   <button id="delete" (click)="deleteBundle()">DELETE</button>
 </div>
 
-<app-add-bundle></app-add-bundle>
+<button (click)="toggleAddBundle()">Add a bundle</button>
+<app-add-bundle *ngIf="showAddBundle"></app-add-bundle>
