Added components for Path and Polyline (mapping path)

--- a/angular-src/src/app/view-bundle/view-bundle.component.html
+++ b/angular-src/src/app/view-bundle/view-bundle.component.html
@@ -6,9 +6,9 @@
 
 <div class="more-bundle-info" *ngIf="showMoreInfo">
     <div class="path" *ngFor="let path of selectedBundle.paths">
-      <span>Path: {{ path }}</span>
+      <app-view-path [path_id]="path"></app-view-path>
     </div>
-    <button class="edit" (click)="toggleEdit()">Edit</button>
+    <button class="edit" (click)="toggleEdit()">Edit bundle</button>
     <app-edit-bundle *ngIf="showEditBundle" [bundle]="selectedBundle"></app-edit-bundle>
 </div>
 
