--- a/angular-src/src/app/view-polyline/view-polyline.component.html
+++ b/angular-src/src/app/view-polyline/view-polyline.component.html
@@ -1,3 +1,8 @@
-<p>
-  view-polyline works!
-</p>
+<agm-map [latitude]="63.82555200329026" [longitude]="20.26475965976715" [zoom]=13>
+  <!-- TODO: replace this with agm-circle, radius is found in pos.radius
+  Haven't been able to get this to work even with hardcoded values -- bug? -->
+  <agm-marker *ngFor="let pos of positions"
+    [latitude]="pos.positions.lat"
+    [longitude]="pos.positions.lng"
+  ></agm-marker>
+</agm-map>
