--- a/angular-src/src/app/view-bundle/view-bundle.component.html
+++ b/angular-src/src/app/view-bundle/view-bundle.component.html
@@ -13,4 +13,6 @@
 </div>
 
 <button (click)="toggleAddBundle()">Add a bundle</button>
+<button (click)="toggleAddPath()">Add a path</button>
+<button (click)="toggleAddPlace()">Add a place</button>
 <app-add-bundle *ngIf="showAddBundle"></app-add-bundle>
