Documentation and error fixes

--- a/angular-src/src/app/view-polyline/view-polyline.component.html
+++ b/angular-src/src/app/view-polyline/view-polyline.component.html
@@ -2,7 +2,7 @@
   <!-- TODO: replace this with agm-circle, radius is found in pos.radius
   Haven't been able to get this to work even with hardcoded values -- bug? -->
   <agm-marker *ngFor="let pos of positions"
-    [latitude]="pos.positons.lat"
+    [latitude]="pos.positions.lat"
     [longitude]="pos.positions.lng"
   ></agm-marker>
 </agm-map>
