--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,2 +1,16 @@
 <title>{{title}}</title>
-<app-view-bundle></app-view-bundle>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      Hiking Trails Management
+    </div>
+  </div>
+  <button (click)="toggleAddBundle()">Add a bundle</button>
+  <button (click)="toggleAddPath()">Add a path</button>
+  <button (click)="toggleAddPlace()">Add a place</button>
+</nav>
+<app-add-bundle *ngIf="showAddBundle"></app-add-bundle>
+<app-add-path *ngIf="showAddPath"></app-add-path>
+<app-add-place *ngIf="showAddPlace"></app-add-place>
+
+<app-view-bundle class="container"></app-view-bundle>
