Simple bug fixes -- mostly with place.media being added when null

--- a/angular-src/src/app/edit-place/edit-place.component.html
+++ b/angular-src/src/app/edit-place/edit-place.component.html
@@ -18,7 +18,7 @@
   <label>Image:
     <input [(ngModel)]="place.image"/>
   </label><br/>
-  <div class="add-media">
+  <div class="add-media" *ngIf="media">
     <label>Media type:
       <input [(ngModel)]="media.type"/>
     </label><br />
