--- a/angular-src/src/app/add-bundle/add-bundle.component.html
+++ b/angular-src/src/app/add-bundle/add-bundle.component.html
@@ -1,16 +1,16 @@
 <div>
   <h3>Adding new Bundle</h3>
-  <label>Name:
-    <input required [(ngModel)]="newBundle.name"/>
-  </label><br/>
-  <label>Info:
-    <input required [(ngModel)]="newBundle.info"/>
-  </label><br/>
-  <label>Paths:
-    <input required [(ngModel)]="paths"/>
-  </label><br/>
-  <label>Image:
-    <input [(ngModel)]="newBundle.image"/>
-  </label><br/>
+  <label>Name:</label>
+  <input required [(ngModel)]="newBundle.name"/>
+  <br/>
+  <label>Info:</label>
+  <input required [(ngModel)]="newBundle.info"/>
+  <br/>
+  <label>Paths:</label>
+  <input required [(ngModel)]="paths"/>
+  <br/>
+  <label>Image:</label>
+  <input [(ngModel)]="newBundle.image"/>
+  <br/>
   <button (click)="submit()">Submit</button>
 </div>
