--- a/angular-src/src/app/add-place/add-place.component.html
+++ b/angular-src/src/app/add-place/add-place.component.html
@@ -1,22 +1,28 @@
 <div>
   <h3>Adding new Place</h3>
-  <label>Name:
-    <input required [(ngModel)]="newPlace.name"/>
-  </label><br/>
-  <label>Info:
-    <input required [(ngModel)]="newPlace.info"/>
-  </label><br/>
-  <label>Image:
-    <input [(ngModel)]="newPlace.image"/>
-  </label><br/>
-  <label>Radius:
-    <input [(ngModel)]="newPlace.radius"/>
-  </label><br/>
-  <label>Longitude:
-    <input [(ngModel)]="newPlace.position.lng"/>
-  </label><br/>
-  <label>Latitude:
-    <input [(ngModel)]="newPlace.position.lat"/>
-  </label>
+  <label>Name:</label>
+  <input required [(ngModel)]="newPlace.name"/>
+  <br/>
+
+  <label>Info:</label>
+  <input required [(ngModel)]="newPlace.info"/>
+  <br/>
+
+  <label>Image:</label>
+  <input [(ngModel)]="newPlace.image"/>
+  <br/>
+
+  <label>Radius:</label>
+  <input [(ngModel)]="newPlace.radius"/>
+  <br/>
+
+  <label>Longitude:</label>
+  <input [(ngModel)]="newPlace.position.lng"/>
+  <br/>
+
+  <label>Latitude:</label>
+  <input [(ngModel)]="newPlace.position.lat"/>
+  <br/>
+
   <button (click)="submit()">Submit</button>
 </div>
