--- a/angular-src/src/app/edit-place/edit-place.component.html
+++ b/angular-src/src/app/edit-place/edit-place.component.html
@@ -1,37 +1,40 @@
 <div>
   <h2>Editing #{{place._id}}</h2>
-  <label>Name:
+  <label>Name:</label>
     <input required [(ngModel)]="place.name"/>
-  </label><br/>
-  <label>Info:
+  <br/>
+  <label>Info:</label>
     <input required [(ngModel)]="place.info"/>
-  </label><br/>
-  <label>Radius:
+  <br/>
+  <label>Radius:</label>
     <input required [(ngModel)]="place.radius"/>
-  </label><br/>
-  <label>Longitude:
+  <br/>
+  <label>Longitude:</label>
     <input required [(ngModel)]="place.position.lng"/>
-  </label><br/>
-  <label>Latitude:
+  <br/>
+  <label>Latitude:</label>
     <input required [(ngModel)]="place.position.lat"/>
-  </label><br/>
-  <label>Image:
+  <br/>
+  <label>Image:</label>
     <input [(ngModel)]="place.image"/>
-  </label><br/>
+  <br/>
+
   <div class="add-media" *ngIf="media">
-    <label>Media type:
+    <label>Media type:</label>
       <input [(ngModel)]="media.type"/>
-    </label><br />
-    <label>Name:
+    <br />
+    <label>Name:</label>
       <input [(ngModel)]="media.name"/>
-    </label><br />
-    <label>Contents:
+    <br />
+    <label>Contents:</label>
       <input [(ngModel)]="media.contents"/>
-    </label><br />
-    <label>Image:
+    <br />
+    <label>Image:</label>
       <input [(ngModel)]="media.image"/>
-    </label><br />
+    <br />
   </div>
+
   <button id="finish-edit" (click)="updatePlace()">Submit</button>
   <button id="delete" (click)="deletePlace()">DELETE</button>
+
 </div>
